# new-math-mnist

./: .gitignore  .pre-commit-config.yaml  README.md  contracts.py  devlogs.md  evaluate.py  generate_dataset.py  llm_client.py  prompts.py  pyproject.toml
new_math_ops/: __init__.py  contracts.py  dataset.py  evaluate.py  generate_dataset.py  llm_client.py  prompts.py
tests/: test_evaluate.py  test_generate_dataset.py  test_llm_client.py  test_package_api.py  test_prompts.py
