[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "new-math-ops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "litellm>=1.82.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.0.0",
    "ruff>=0.11.0",
    "types-tqdm>=4.67.3.20260303",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.setuptools]
py-modules = ["contracts", "evaluate", "generate_dataset", "llm_client", "prompts"]

[tool.setuptools.packages.find]
where = ["."]
include = ["new_math_ops*"]
